1.21.1-1.0-Beta
Added Almost Unified.
Added AppleSkin.
Added Architectury API.
Added Balm.
Added Cobblegen Galore.
Added Collective.
Added Comforts (Fabric/Forge/Quilt).
Added Clumps.
Added Create.
Added Easy Anvils [Forge & Fabric].
Added Easy Magic [Forge & Fabric].
Added Easy Villagers.
Added Farmer's Delight.
Added FerriteCore ((Neo)Forge).
Added FTB Library (Forge).
Added FTB Quests (Forge).
Added FTB Teams (Forge).
Added FTB Ultimine (Forge).
Added FTB XMod Compat.
Added Guard Villagers.
Added Jade 🔍.
Added JourneyMap.
Added Just Enough Items (JEI).
Added Just Enough Resources (JER).
Added KubeJS.
Added Leaves Be Gone [Forge & Fabric].
Added LootJS: KubeJS Addon.
Added Moonlight Lib.
Added MoreJS.
Added Mouse Tweaks.
Added Overflowing Bars [Forge & Fabric].
Added Pick Up Notifier [Forge & Fabric].
Added Puzzles Lib [Forge & Fabric].
Added Resource Pack Overrides [Forge & Fabric].
Added Rhino.
Added Smarter Farmers (farmers replant).
Added Sophisticated Backpacks.
Added Sophisticated Core.
Added Sophisticated Storage.
Added Trading Post [Forge & Fabric].
Added Village Spawn Point.
Added Villager Names.
Added Visual Workbench.
Added Waystones.

Ported custom items from Infinite Horizons 1.20.1.
Ported tag scripts from Infinite Horizons 1.20.1 (with some edits).
Ported Farmer's Delight Cutting Board Recipes from Infinite Horizons 1.20.1 (not yet implemented).
Added Infinite Horizons Pebbles (Stone and Andesite).
Added Infinite Horizons Wooden, Stone, and Iron Trowel (for obtaining pebbles and crushed raw ores).
Ported Shapeless and Shaped Crafting Recipes for Infinite Horizons 1.20.1 (Obviously not all used yet).
Added Infinite Horizons Stone and Iron Hammer (for early cobbleworks).
Started Alpha Questline.
Started Beta Questline.
Started Gamma Questline.