@@ -510,12 +510,22 @@
 		}
 		{
 			dependencies: ["3276ACBC80D0AF10"]
+			icon: {
+				id: "mysticalagradditions:insanium_essence"
+			}
 			id: "0E3F69CBC98336DE"
-			tasks: [{
-				id: "132C5BCE7B89D1C1"
-				item: { count: 1, id: "mysticalagriculture:supremium_essence" }
-				type: "item"
-			}]
+			tasks: [
+				{
+					id: "567FC7B196D1F646"
+					item: { count: 1, id: "matc:supremium_crystal" }
+					type: "item"
+				}
+				{
+					id: "7CB470B2C6FBAD6E"
+					item: { count: 1, id: "mysticalagradditions:insanium_essence" }
+					type: "item"
+				}
+			]
 			x: 0.0d
 			y: 6.0d
 		}
